--- a/EscalArt/templates/registration/login.html
+++ b/EscalArt/templates/registration/login.html
@@ -30,9 +30,8 @@
             </div>
             <ul class="menu">
                 <li><a href="{% url 'home' %}"><i class="fa-solid fa-house-chimney"></i></a></li>
-                <li><a href=""><i class="fa-solid fa-comment-dots"></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-comment-dots"></i></a></li>
                 <li><a href="#"><i class="fa-solid fa-question"></i></a></li>
-                <li><a href="{% url 'perfil' %}"><i class="fa-solid fa-circle-user"></i></a></li>
             </ul>
         </nav>
     </header>
@@ -46,14 +45,11 @@
                 {% csrf_token %} {{ form | crispy}}
                 <input class="check" type="checkbox" id="checkid">
                 <label for="checkid">Recuerdame</label>
-                <a href="#">¿Olvidaste tu contraseña?</a>
+                <a href="{% url 'reset_password' %}">¿Olvidaste tu contraseña?</a>
 
-                <div class="btn-guardar">
-                    <input class="boton-form" type="submit" value="Iniciar Sesion">
-                </div>
-                <div class="direc-cuenta">
-                    <a href="#">¿No tienes cuenta?<span>Crear</span></a>
-                </div>
+
+                <input class="boton-form" type="submit" value="Iniciar Sesion">
+
             </form>
         </div>
     </div>
